    (Kai Sasaki via aajisaka)

    MAPREDUCE-6610. JobHistoryEventHandler should not swallow timeline response
    (Li Lu via jianhe)

    MAPREDUCE-6563. Streaming documentation contains a stray '%' character.
    (cnauroth)

    MAPREDUCE-6616. Fail to create jobhistory file if there are some multibyte
    characters in the job name. (Kousuke Saruta via aajisaka)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-6637. Testcase Failure : TestFileInputFormat.testSplitLocationInfo.
    (Brahma Reddy Battula via wang)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6377. JHS sorting on state column not working in webUi.
    (zhihai xu via devaraj)

    MAPREDUCE-5883. "Total megabyte-seconds" in job counters is slightly
    misleading (Nathan Roberts via jlowe)

    MAPREDUCE-6583. Clarify confusing sentence in MapReduce tutorial document.
    (Kai Sasaki via aajisaka)

    MAPREDUCE-6554. MRAppMaster servicestart failing with NPE in
    MRAppMaster#parsePreviousJobHistory (Bibin A Chundatt via jlowe)

    MAPREDUCE-6618. YarnClientProtocolProvider leaking the YarnClient thread.
    (Xuan Gong via jlowe)

    MAPREDUCE-6621. Memory Leak in JobClient#submitJobInternal() (Xuan Gong
    via jlowe)

    MAPREDUCE-6413. TestLocalJobSubmission is failing with unknown host
    (zhihai xu via jlowe)

    MAPREDUCE-6191. Improve clearing stale state of Java serialization
                    testcase.  (Sam Liu via Eric Yang)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
    if mapId is not in the cache. (zhihai xu via devaraj)

    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
    (zhihai xu via devaraj)

    MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
    allocate call. (Anubhav Dhoot via kasha)
