@@ -240,6 +240,23 @@ operator|<
 name|splitLength
 condition|)
 block|{
+name|long
+name|leftBytesForSplit
+init|=
+name|splitLength
+operator|-
+name|totalBytesRead
+decl_stmt|;
+comment|// check if leftBytesForSplit exceed Integer.MAX_VALUE
+if|if
+condition|(
+name|leftBytesForSplit
+operator|<=
+name|Integer
+operator|.
+name|MAX_VALUE
+condition|)
+block|{
 name|maxBytesToRead
 operator|=
 name|Math
@@ -248,16 +265,13 @@ name|min
 argument_list|(
 name|maxBytesToRead
 argument_list|,
-call|(
+operator|(
 name|int
-call|)
-argument_list|(
-name|splitLength
-operator|-
-name|totalBytesRead
-argument_list|)
+operator|)
+name|leftBytesForSplit
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|int
 name|bytesRead
