@@ -741,6 +741,237 @@ name|numRecordsRemainingSplits
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testLargeSplitRecordForFile (Configuration conf, long firstSplitLength, long testFileSize, Path testFilePath)
+specifier|private
+name|void
+name|testLargeSplitRecordForFile
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|,
+name|long
+name|firstSplitLength
+parameter_list|,
+name|long
+name|testFileSize
+parameter_list|,
+name|Path
+name|testFilePath
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|lib
+operator|.
+name|input
+operator|.
+name|LineRecordReader
+operator|.
+name|MAX_LINE_LENGTH
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"unexpected firstSplitLength:"
+operator|+
+name|firstSplitLength
+argument_list|,
+name|testFileSize
+operator|<
+name|firstSplitLength
+argument_list|)
+expr_stmt|;
+name|String
+name|delimiter
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"textinputformat.record.delimiter"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|recordDelimiterBytes
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|delimiter
+condition|)
+block|{
+name|recordDelimiterBytes
+operator|=
+name|delimiter
+operator|.
+name|getBytes
+argument_list|(
+name|Charsets
+operator|.
+name|UTF_8
+argument_list|)
+expr_stmt|;
+block|}
+comment|// read the data without splitting to count the records
+name|FileSplit
+name|split
+init|=
+operator|new
+name|FileSplit
+argument_list|(
+name|testFilePath
+argument_list|,
+literal|0
+argument_list|,
+name|testFileSize
+argument_list|,
+operator|(
+name|String
+index|[]
+operator|)
+literal|null
+argument_list|)
+decl_stmt|;
+name|LineRecordReader
+name|reader
+init|=
+operator|new
+name|LineRecordReader
+argument_list|(
+name|conf
+argument_list|,
+name|split
+argument_list|,
+name|recordDelimiterBytes
+argument_list|)
+decl_stmt|;
+name|LongWritable
+name|key
+init|=
+operator|new
+name|LongWritable
+argument_list|()
+decl_stmt|;
+name|Text
+name|value
+init|=
+operator|new
+name|Text
+argument_list|()
+decl_stmt|;
+name|int
+name|numRecordsNoSplits
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|reader
+operator|.
+name|next
+argument_list|(
+name|key
+argument_list|,
+name|value
+argument_list|)
+condition|)
+block|{
+operator|++
+name|numRecordsNoSplits
+expr_stmt|;
+block|}
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// count the records in the first split
+name|split
+operator|=
+operator|new
+name|FileSplit
+argument_list|(
+name|testFilePath
+argument_list|,
+literal|0
+argument_list|,
+name|firstSplitLength
+argument_list|,
+operator|(
+name|String
+index|[]
+operator|)
+literal|null
+argument_list|)
+expr_stmt|;
+name|reader
+operator|=
+operator|new
+name|LineRecordReader
+argument_list|(
+name|conf
+argument_list|,
+name|split
+argument_list|,
+name|recordDelimiterBytes
+argument_list|)
+expr_stmt|;
+name|int
+name|numRecordsFirstSplit
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|reader
+operator|.
+name|next
+argument_list|(
+name|key
+argument_list|,
+name|value
+argument_list|)
+condition|)
+block|{
+operator|++
+name|numRecordsFirstSplit
+expr_stmt|;
+block|}
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected number of records in split"
+argument_list|,
+name|numRecordsNoSplits
+argument_list|,
+name|numRecordsFirstSplit
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testBzip2SplitEndsAtCR ()
@@ -1849,6 +2080,104 @@ block|}
 return|return
 name|file
 return|;
+block|}
+annotation|@
+name|Test
+DECL|method|testUncompressedInputWithLargeSplitSize ()
+specifier|public
+name|void
+name|testUncompressedInputWithLargeSplitSize
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+comment|// single char delimiter
+name|String
+name|inputData
+init|=
+literal|"abcde +fghij+ klmno+pqrst+uvwxyz"
+decl_stmt|;
+name|Path
+name|inputFile
+init|=
+name|createInputFile
+argument_list|(
+name|conf
+argument_list|,
+name|inputData
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"textinputformat.record.delimiter"
+argument_list|,
+literal|"+"
+argument_list|)
+expr_stmt|;
+comment|// split size over max value of integer
+name|long
+name|longSplitSize
+init|=
+operator|(
+name|long
+operator|)
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|+
+literal|1
+decl_stmt|;
+for|for
+control|(
+name|int
+name|bufferSize
+init|=
+literal|1
+init|;
+name|bufferSize
+operator|<=
+name|inputData
+operator|.
+name|length
+argument_list|()
+condition|;
+name|bufferSize
+operator|++
+control|)
+block|{
+name|conf
+operator|.
+name|setInt
+argument_list|(
+literal|"io.file.buffer.size"
+argument_list|,
+name|bufferSize
+argument_list|)
+expr_stmt|;
+name|testLargeSplitRecordForFile
+argument_list|(
+name|conf
+argument_list|,
+name|longSplitSize
+argument_list|,
+name|inputData
+operator|.
+name|length
+argument_list|()
+argument_list|,
+name|inputFile
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
